--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # Backend API Base URL
-VITE_API_BASE_URL=https://localhost:7012/api
+# VITE_API_BASE_URL=https://localhost:7012/api
+VITE_API_BASE_URL=https://global-strategist-server-ccfcana4era7dhdu.westeurope-01.azurewebsites.net/api
