feat: implemented chat, strategist view page, project view page features, using signalR from microsft for the real time communication

--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
-# Backend API Base URL
-# VITE_API_BASE_URL=https://localhost:7012/api
-VITE_API_BASE_URL=https://global-strategist-server-ccfcana4era7dhdu.westeurope-01.azurewebsites.net/api
+# Frontend always calls same-origin. Vite proxies /api and /hubs to the backend.
+VITE_API_BASE_URL=/api
+
+# Quick switch: change ONLY this line
+# Local backend (recommended for dev):
+VITE_PROXY_TARGET=http://localhost:5194
+
+# Local HTTPS backend (optional):
+# VITE_PROXY_TARGET=https://localhost:7012
+# VITE_PROXY_SECURE=false
+
+# Azure backend (optional):
+# VITE_PROXY_TARGET=https://global-strategist-server-ccfcana4era7dhdu.westeurope-01.azurewebsites.net
