--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@ VITE_API_BASE_URL=/api
 
 # Quick switch: change ONLY this line
 # Local backend (recommended for dev):
-VITE_PROXY_TARGET=http://localhost:5194
+# VITE_PROXY_TARGET=http://localhost:5194
 
 # Local HTTPS backend (optional):
 # VITE_PROXY_TARGET=https://localhost:7012
 # VITE_PROXY_SECURE=false
 
 # Azure backend (optional):
-# VITE_PROXY_TARGET=https://global-strategist-server-ccfcana4era7dhdu.westeurope-01.azurewebsites.net
+VITE_PROXY_TARGET=https://global-strategist-server-ccfcana4era7dhdu.westeurope-01.azurewebsites.net
