--- a/.env
+++ b/.env
@@ -1,13 +1,6 @@
-# Frontend always calls same-origin. Vite proxies /api and /hubs to the backend.
-VITE_API_BASE_URL=/api
+# Backend API Base URL
+# Local development
+# VITE_API_BASE_URL=http://localhost:5194/api
 
-# Quick switch: change ONLY this line
-# Local backend (recommended for dev):
-# VITE_PROXY_TARGET=http://localhost:5194
-
-# Local HTTPS backend (optional):
-# VITE_PROXY_TARGET=https://localhost:7012
-# VITE_PROXY_SECURE=false
-
-# Azure backend (optional):
-VITE_PROXY_TARGET=https://global-strategist-server-ccfcana4era7dhdu.westeurope-01.azurewebsites.net
+# Production (comment above, uncomment below when deploying)
+# VITE_API_BASE_URL=https://global-strategist-server-ccfcana4era7dhdu.westeurope-01.azurewebsites.net/api
