--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@
 # VITE_API_BASE_URL=http://localhost:5194/api
 
 # Production (comment above, uncomment below when deploying)
-# VITE_API_BASE_URL=https://global-strategist-server-ccfcana4era7dhdu.westeurope-01.azurewebsites.net/api
+VITE_API_BASE_URL=https://global-strategist-server-ccfcana4era7dhdu.westeurope-01.azurewebsites.net/api
